# ImageArtBorder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.ps1
.github/workflows/: release.yml
docs/: README.md  capture-one.md  command-reference.md  formats-and-preservation.md  installation.md  releasing.md  troubleshooting.md  usage.md
release/: Add-Border.bat  Border-ExportedImages.ps1  README-unix.txt  README.md  README.txt  add-border.sh  border-exported-images.sh  build-all.bat  build-all.ps1  install.ps1  install.sh  pack-release.bat  pack-release.ps1  pack-zips.bat  pack-zips.ps1  uninstall.ps1  uninstall.sh
scripts/: Dockerfile.linux-build  Dockerfile.macos-build  build-linux-docker.ps1  build-linux-pack.sh  build-linux.sh  build-macos-docker.ps1  build-macos-pack.sh  build-macos.sh  common-pack.sh  pack-macos.ps1
src/: border.rs  border_calc.rs  cli.rs  formats.rs  jpeg_encode.rs  main.rs
src/metadata/: jpeg.rs  mod.rs  png.rs  tiff.rs
